--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,15 @@
+# Symbol Node URL (Required)
 NODE_URL=https://YOUR_SYMBOL_NODE_URL:3001
+SCHEMA_PATH=./schema/1_0_5.yml
+
+# Server Configuration (Optional)
+PORT=4000
+HOST=localhost
+
+# API Configuration (Optional)
+API_TIMEOUT=5000
+MAX_REQUESTS=100
+TIME_WINDOW=60000
+
+# CORS Configuration (Optional)
+CORS_ORIGIN=*
