--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# symbol-graphql-server
+.mesh
+.meshrc.yaml
+
 # Based on https://raw.githubusercontent.com/github/gitignore/main/Node.gitignore
 
 # Logs
@@ -173,5 +177,3 @@ dist
 
 # Finder (MacOS) folder config
 .DS_Store
-
-.mesh
