--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "GraphQL server for Symbol blockchain",
   "main": "index.js",
   "scripts": {
-    "generate": "node -r dotenv/config ./node_modules/.bin/mesh generate",
-    "start": "node -r dotenv/config ./node_modules/.bin/mesh dev",
-    "build": "node -r dotenv/config ./node_modules/.bin/mesh build",
+    "start": "tsx -r dotenv/config scripts/server.mts",
+    "dev": "tsx watch -r dotenv/config scripts/server.mts",
     "swagger": "node -r dotenv/config ./scripts/swagger.js"
   },
   "keywords": [
@@ -17,19 +16,22 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@graphql-mesh/cli": "^0.95.2",
-    "@graphql-mesh/openapi": "^0.106.3",
-    "@graphql-mesh/transform-rename": "^0.102.2",
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
     "graphql": "^16.9.0",
-    "swagger-ui-express": "^5.0.1",
-    "symbol-sdk": "^3",
+    "graphql-http": "^1.22.3",
+    "openapi-to-graphql": "^3.0.7",
+    "swagger-ui-express": "5.0.1",
+    "symbol-sdk": "^3.2.3",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@symbol-blockchain-community/symbol-rest-client": "^1.0.2",
-    "@types/node": "^22.5.0",
-    "dotenv": "^16.4.5",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.10.1",
+    "@types/yamljs": "^0.2.34",
+    "dotenv": "^16.4.7",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "tsx": "^4.7.0",
+    "typescript": "^5.7.2"
   }
 }
