--- a/package.json
+++ b/package.json
@@ -29,14 +29,12 @@
     "dev": "mesh dev",
     "swagger": "tsx ./scripts/swagger.mts"
   },
-  "dependencies": {},
   "devDependencies": {
     "@graphql-mesh/cli": "0.98.7",
     "@graphql-mesh/openapi": "0.108.6",
     "@graphql-mesh/transform-rename": "^0.103.9",
     "@types/express": "^4.17.21",
     "@types/node": "^22.10.1",
-    "@types/open": "^6.2.1",
     "@types/yamljs": "^0.2.34",
     "express": "^4.21.2",
     "graphql-yoga": "5.10.4",
@@ -47,5 +45,17 @@
     "tsx": "^4.7.0",
     "typescript": "^5.7.2",
     "yamljs": "^0.3.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "esbuild@<=0.24.2": ">=0.25.0",
+      "@babel/runtime@<7.26.10": ">=7.26.10",
+      "@babel/helpers@<7.26.10": ">=7.26.10",
+      "base-x@<=3.0.10": ">=3.0.11",
+      "brace-expansion@>=1.0.0 <=1.1.11": ">=1.1.12",
+      "brace-expansion@>=2.0.0 <=2.0.1": ">=2.0.2",
+      "glob@7.2.3": ">=8.0.0",
+      "minimatch@3.1.2": ">=5.0.0"
+    }
   }
 }
